<resources>
    <string name="app_name">LaxmiJewellersApplication</string>
    <string name="LoginTitle">LOGIN</string>
    <string name="passwordHint">*********</string>
    <string name="emailHint">Email</string>
    <string name="LoginButton">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="RetrieveAccount">RETRIEVE ACCOUNT</string>
    <string name="DashboardTitle">Dashboard</string>
    <string name="LogoContentDescription">Laxmi Jewellers Logo</string>
    <string name="emailicon">EmailIcon</string>
    <string name="RegisterTitle">REGISTER</string>
    <string name="usernameIcon">Username Icon</string>
    <string name="usernameHint">Username</string>
    <string name="reenterPassword">Re-Enter Password</string>
    <string name="reenterPasswordHint">Re-Enter Password</string>
    <string name="registerButton">Register</string>
    <string name="passwordenterHint">Enter Password</string>
    <string name="AdminRegisterTitle">ADMIN REGISTRATION</string>
    <string name="adminRegistration">Admin\nRegistration</string>
    <string name="enterPassword">Enter Password here</string>
    <string name="adminIcon">Admin Registration Icon</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="sellButton">Sell</string>
    <string name="dashboardButton">Dashboard</string>
    <string name="catalogButton">Catalog</string>
    <string name="inventoryButton">Inventory</string>
    <string name="reportingButton">Reporting</string>
    <string name="settingsButton">Settings</string>
    <string name="SettingsTitle">USERS</string>
    <string name="CatalogTitle">CATALOG</string>
    <string name="InventoryTitle">INVENTORY</string>
    <string name="ReportingTitle">REPORTING</string>
    <string name="SellTitle">SELL</string>
    <string name="AddUserButton">Add User</string>
    <string name="user">User</string>
    <string name="role">Role</string>
    <string name="AdminAddUser">Admin (You)</string>
    <string name="Employee1">Employee 1</string>
    <string name="UserRegisterTitle">EMPLOYEE REGISTRATION</string>
    <string name="logOutButton">LOG OUT</string>
    <string name="password_helper_icon">Password Helper Icon</string>
    <string name="UserPrivilege">User Role: No User Logged in.</string>
    <string name="currentUsername">User Email: No User Logged in.</string>

</resources>