<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <include android:visibility="gone" layout="@layout/activity_base"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SettingsTitle"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:layout_gravity="start"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/addUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/AddUserButton"
        />
    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text= "@string/logOutButton"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/edit_text_border"
        android:layout_margin="15dp"
        android:paddingBottom="15dp" />
    <LinearLayout
        android:layout_width="700dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/user"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/role"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/edit_text_border"
        android:layout_margin="15dp"
        android:paddingBottom="15dp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:background="@color/lightGrey"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:alpha="0.9"
                android:src="@drawable/adminicon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/AdminAddUser"
                android:textSize="40sp"
                />
            <ImageView
                android:layout_width="60dp"
                android:alpha="0.9"
                android:layout_height="match_parent"
                android:src="@drawable/settings"
                android:layout_marginLeft="250dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:background="@color/lightGrey"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:alpha="0.9"
                android:src="@drawable/emailicon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/Employee1"
                android:textSize="40sp"
                />
            <ImageView
                android:layout_width="60dp"
                android:alpha="0.9"
                android:layout_height="match_parent"
                android:src="@drawable/trashicon"
                android:layout_marginLeft="260dp"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>