<!-- activity_login.xml -->
<LinearLayout android:id="@+id/linear_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryGrey"
    android:paddingHorizontal="130dp"
    android:paddingBottom="100dp"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/LaxmiJewellersLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardElevation="10dp"
        android:contentDescription="@string/LogoContentDescription"
        android:src="@drawable/img"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="350dp"
            android:orientation="vertical"
            android:paddingHorizontal="150dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:gravity="center"
            android:background="@drawable/card_shadow"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LoginTitle"
                android:textSize="70sp"
                android:textStyle="bold"
                android:textColor="@color/primaryGreen"
                android:layout_marginBottom="15dp"
                />
            <LinearLayout
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="start"
                android:background="@color/primaryGrey"

                >
                <ImageView
                    android:id="@+id/emailIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/emailicon"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:background="@color/primaryGrey"
                    android:contentDescription="@string/emailicon" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primaryGrey"
                    android:autofillHints="emailAddress">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primaryGrey"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/mediumGrey"
                        android:textColorHint="@color/lightGrey"
                        android:maxLines="1"
                        android:textSize="30sp"
                        android:hint="@string/emailHint"/>

                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/edit_text_border"
                android:layout_marginBottom="15dp"
                android:paddingBottom="15dp"/>


            <LinearLayout
                android:id="@+id/passwordLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="start"
                >
                <ImageView
                    android:id="@+id/passwordIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/passwordicon"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:background="@color/primaryGrey"
                    android:contentDescription="@string/passwordHint" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primaryGrey"
                    android:hint="@string/passwordHint"
                    android:autofillHints="password">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/passwordInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primaryGrey"
                        android:inputType="textPassword"
                        android:textColor="@color/mediumGrey"
                        android:textColorHint="@color/lightGrey"
                        android:maxLines="1"
                        android:textSize="30sp" />

                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/edit_text_border"
                android:layout_marginBottom="15dp"
                android:paddingBottom="15dp"/>


            <Button
                android:id="@+id/loginButton"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/primaryGreen"
                android:text="@string/LoginButton"
                app:iconTint="@color/primaryGreen" />
            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/forgot_password"
                android:textSize="30sp"
                android:textColor="@color/primaryGreen"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:onClick="retrieveAccount"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
